[metadata]
name = cronwatch
version = 0.1.0
description = Lightweight cron job monitor that sends alerts when jobs fail or run too long.
author = cronwatch developers
license = MIT

[options]
packages = cronwatch
python_requires = >=3.9
install_requires =
    PyYAML>=6.0

[options.entry_points]
console_scripts =
    cronwatch = cronwatch.cli:main

[options.extras_require]
dev =
    pytest>=7
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short

[coverage:run]
source = cronwatch
omit =
    tests/*
